prevent items from overlapping on the student histogram

--- a/client/stylesheets/data-report.css
+++ b/client/stylesheets/data-report.css
@@ -210,8 +210,8 @@
 
 .vert-ind {
     position: absolute;
-    top: 0px;
-    left: 10px;
+    top: 0;
+    left: 0;
     margin: 0;
     z-index: 100000;
 }
